# fit

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
docs/: README.md
docs/architecture/: bones.md  data_flow.md  dependencies.md  overview.md  sequence.md
docs/math/: geometry.md  smoothing.md  transforms.md  weights.md
docs/note/: batch_intuition.md  consolidation_intuition.md  obb_intuition.md  project_concept.md  rbf_intuition.md  shapekeys_intuition.md  smoothing_intuition.md  weights_intuition.md
docs/spec/: req.md
src/: main.py
src/application/: batch.py  retargeter.py
src/domain/: models.py
src/infrastructure/blender/: armature.py  blendshapes.py  deformation.py  geometry.py  mesh.py  ops.py  weights.py
